[project]
name = "nexus-mcp"
version = "1.0.0"
description = "A hybrid search & retrieval MCP server combining web search and intelligent content extraction"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=1.0.0",
]

[project.scripts]
nexus-mcp = "nexus_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/nexus-mcp"
Repository = "https://github.com/yourusername/nexus-mcp"
Issues = "https://github.com/yourusername/nexus-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "venv/*", ".venv/*"]
